sumo/tests/sumo/errors/unknown_option/output.sumo.exe
SUMO sumo
 (c) DLR/ZAIK 2000-2006; http://sumo.sourceforge.net
 Use --help to get the list of options.
